button updated in hero section and navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,8 @@
 /* global.css or _app.js (import this file) */
 :root {
     /* --color-primary: #7b68ee; */
-    --color-primary: #00b3f1;
-    --color-secondary: #ff9800;
+    /* --color-primary: #00b3f1; */
+    --color-primary: #00B2F0;
+    --color-secondary: #F6851F;
   }
   
